clear notebook cells

--- a/notebooks/fundamental_results.ipynb
+++ b/notebooks/fundamental_results.ipynb
@@ -418,17 +418,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmark_df = adapt_benchmark(perf_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ALrig\\PROJET-QUANT\\alpha-research-equities\\src\\data\\load_data.py:49: FutureWarning: The default fill_method='pad' in DataFrame.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
-      "  returns = price_df.pct_change().dropna()\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -481,13 +482,12 @@
        "2 2024-12-31          0.336376"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "benchmark_df = adapt_benchmark(perf_df)\n",
     "benchmark_df"
    ]
   },
