add models prediction for daily alpha + clean repo

--- a/notebooks/results/fundamental_results.ipynb
+++ b/notebooks/results/fundamental_results.ipynb
@@ -29,8 +29,8 @@
    "source": [
     "from src.data.compute_zscores import compute_fundamental_zscores\n",
     "from src.data.load_data import load_all_fundamentals, get_all_returns_fundamental, adapt_benchmark\n",
-    "from src.signals.fundamental.dataset_regression_alpha_result import plot_analyse_alpha_target,create_fundamental_dataset, train_ridge_on_fundamental_alpha\n",
-    "from src.signals.fundamental.long_short_strategy import plot_long_short_quantile_strategy, backtest_long_short_neutral\n",
+    "from signals.fundamental.dataset_features import plot_analyse_alpha_target,create_fundamental_dataset, train_ridge_on_fundamental_alpha\n",
+    "from signals.fundamental.backtest_strategies import plot_long_short_quantile_strategy, backtest_long_short_neutral\n",
     "from src.evaluation.strategy_indicators import evaluate_long_short_results\n",
     "dfs = load_all_fundamentals()\n",
     "df_z = compute_fundamental_zscores(dfs)\n",
