--- a/notebooks/results/daily_results.ipynb
+++ b/notebooks/results/daily_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msignals\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdaily\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdataset_features\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m create_features_dataframe\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msignals\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdaily\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtrain_model\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m evaluate_model, train_lgbm_model, train_linear_model, backtest_strategy, compare_strategy_vs_stock, compare_portfolio_vs_benchmark, strategy_return, strategy_return_lgbm\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
+     ]
+    }
+   ],
    "source": [
-    "from src.signals.daily.features_engineering import create_features_dataframe\n",
+    "from src.signals.daily.dataset_features import create_features_dataframe\n",
     "from src.signals.daily.train_model import evaluate_model, train_lgbm_model, train_linear_model, backtest_strategy, compare_strategy_vs_stock, compare_portfolio_vs_benchmark, strategy_return, strategy_return_lgbm"
    ]
   },
