--- a/notebooks/evaluations/models_fundamental.ipynb
+++ b/notebooks/evaluations/models_fundamental.ipynb
@@ -32,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  15 of 15 completed\n"
+     ]
+    }
+   ],
    "source": [
     "TICKERS = [\n",
     "    \"AIR.PA\",     # Airbus\n",
